<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="2dp">

    <TextView
        android:id="@+id/txtStart"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:background="@drawable/day_no_select_background"
        android:gravity="center"
        android:hint="@string/repeat_start" />

    <TextView
        android:id="@+id/txtFinish"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:background="@drawable/day_no_select_background"
        android:gravity="center"
        android:hint="@string/repeat_finish" />

    <TextView
        android:id="@+id/txtInterval"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:background="@drawable/day_no_select_background"
        android:gravity="center"
        android:hint="@string/repeat_interval" />

    <ImageView
        android:id="@+id/imgAddRepeatItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_action_new" />

</LinearLayout>